--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -10,9 +10,9 @@
   height: 100vh;
   flex-direction: column;
   max-width: 50%;
-  padding-left: 25px;
-  padding-top: 25px;
-  padding-right: 25px;
+  padding-left: 24px;
+  padding-top: 24px;
+  padding-right: 24px;
   justify-content: center;
 }
 .logo {
@@ -52,7 +52,7 @@
   display: flex;
   flex-direction: column;
   background: #4f4f4f;
-  width: 40%;
+  width: 100px;
   height: 40%;
   min-height: 20rem;
   align-items: center;
